--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "断言集"
-header-img: "assets/about-bg.jpg"
+header-img: "assets/about-bg.webp"
 multilingual: true
 ---
 
