[UPDATE] new post

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「离开世界之前 一切都是过程」"
+description: "「世界上只有一种真正的英雄主义，那就是在认清生活的真相后依然热爱生活。」"
 ---
 
 {% for post in paginator.posts %}
